creusot/tests/should_fail/bug/692.mlcfg

module C692_Incorrect
  type c
  type b
  predicate resolve1 (self : c)
  val resolve1 (self : c) : bool
    ensures { result = resolve1 self }
    
  use prelude.Borrow
  predicate postcondition_mut0 (self : borrowed c) (_2 : ()) (_3 : bool)
  val postcondition_mut0 (self : borrowed c) (_2 : ()) (_3 : bool) : bool
    ensures { result = postcondition_mut0 self _2 _3 }
    
  predicate inv2 (_x : borrowed c)
  val inv2 (_x : borrowed c) : bool
    ensures { result = inv2 _x }
    
  predicate postcondition_once0 (self : c) (_2 : ()) (_3 : bool)
  val postcondition_once0 (self : c) (_2 : ()) (_3 : bool) : bool
    ensures { result = postcondition_once0 self _2 _3 }
    
  predicate inv4 (_x : bool)
  val inv4 (_x : bool) : bool
    ensures { result = inv4 _x }
    
  predicate inv3 (_x : ())
  val inv3 (_x : ()) : bool
    ensures { result = inv3 _x }
    
  predicate inv1 (_x : c)
  val inv1 (_x : c) : bool
    ensures { result = inv1 _x }
    
  function fn_mut_once0 (self : c) (args : ()) (res : bool) : ()
  val fn_mut_once0 (self : c) (args : ()) (res : bool) : ()
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 123 19 123 23] inv1 self}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 123 25 123 29] inv3 args}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 123 37 123 40] inv4 res}
    ensures { result = fn_mut_once0 self args res }
    
  axiom fn_mut_once0_spec : forall self : c, args : (), res : bool . ([#"../../../../../creusot-contracts/src/std/ops.rs" 123 19 123 23] inv1 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 123 25 123 29] inv3 args)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 123 37 123 40] inv4 res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 122 14 122 135] postcondition_once0 self args res = (exists s : borrowed c . inv2 s /\  * s = self /\ postcondition_mut0 s args res /\ resolve1 ( ^ s)))
  predicate unnest0 (self : c) (_2 : c)
  val unnest0 (self : c) (_2 : c) : bool
    ensures { result = unnest0 self _2 }
    
  function unnest_trans0 (self : c) (b : c) (c : c) : ()
  val unnest_trans0 (self : c) (b : c) (c : c) : ()
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 114 15 114 29] unnest0 self b}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 115 15 115 26] unnest0 b c}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 117 20 117 24] inv1 self}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 117 26 117 27] inv1 b}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 117 35 117 36] inv1 c}
    ensures { result = unnest_trans0 self b c }
    
  axiom unnest_trans0_spec : forall self : c, b : c, c : c . ([#"../../../../../creusot-contracts/src/std/ops.rs" 114 15 114 29] unnest0 self b)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 115 15 115 26] unnest0 b c)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 117 20 117 24] inv1 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 117 26 117 27] inv1 b)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 117 35 117 36] inv1 c)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 116 14 116 28] unnest0 self c)
  function unnest_refl0 (self : c) : ()
  val unnest_refl0 (self : c) : ()
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 110 19 110 23] inv1 self}
    ensures { result = unnest_refl0 self }
    
  axiom unnest_refl0_spec : forall self : c . ([#"../../../../../creusot-contracts/src/std/ops.rs" 110 19 110 23] inv1 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 109 14 109 31] unnest0 self self)
  function postcondition_mut_unnest0 (self : borrowed c) (args : ()) (res : bool) : ()
  val postcondition_mut_unnest0 (self : borrowed c) (args : ()) (res : bool) : ()
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 103 15 103 48] postcondition_mut0 self args res}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 105 37 105 41] inv2 self}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 105 43 105 47] inv3 args}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 105 55 105 58] inv4 res}
    ensures { result = postcondition_mut_unnest0 self args res }
    
  axiom postcondition_mut_unnest0_spec : forall self : borrowed c, args : (), res : bool . ([#"../../../../../creusot-contracts/src/std/ops.rs" 103 15 103 48] postcondition_mut0 self args res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 105 37 105 41] inv2 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 105 43 105 47] inv3 args)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 105 55 105 58] inv4 res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 104 14 104 35] unnest0 ( * self) ( ^ self))
  predicate invariant4 (self : bool) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  val invariant4 (self : bool) : bool
    ensures { result = invariant4 self }
    
  axiom inv4 : forall x : bool . inv4 x = true
  predicate invariant3 (self : ()) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  val invariant3 (self : ()) : bool
    ensures { result = invariant3 self }
    
  axiom inv3 : forall x : () . inv3 x = true
  predicate invariant2 (self : borrowed c)
  val invariant2 (self : borrowed c) : bool
    ensures { result = invariant2 self }
    
  axiom inv2 : forall x : borrowed c . inv2 x = true
  predicate postcondition0 (self : c) (_2 : ()) (_3 : bool)
  val postcondition0 (self : c) (_2 : ()) (_3 : bool) : bool
    ensures { result = postcondition0 self _2 _3 }
    
  function fn_once0 (self : c) (args : ()) (res : bool) : ()
  val fn_once0 (self : c) (args : ()) (res : bool) : ()
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 145 15 145 19] inv1 self}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 145 21 145 25] inv3 args}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 145 33 145 36] inv4 res}
    ensures { result = fn_once0 self args res }
    
  axiom fn_once0_spec : forall self : c, args : (), res : bool . ([#"../../../../../creusot-contracts/src/std/ops.rs" 145 15 145 19] inv1 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 145 21 145 25] inv3 args)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 145 33 145 36] inv4 res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 144 14 144 101] postcondition_once0 self args res = (resolve1 self /\ postcondition0 self args res))
  predicate resolve2 (self : borrowed c) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 27 20 27 34]  ^ self =  * self
  val resolve2 (self : borrowed c) : bool
    ensures { result = resolve2 self }
    
  function fn_mut0 (self : borrowed c) (args : ()) (res : bool) : ()
  val fn_mut0 (self : borrowed c) (args : ()) (res : bool) : ()
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 139 19 139 23] inv2 self}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 139 25 139 29] inv3 args}
    requires {[#"../../../../../creusot-contracts/src/std/ops.rs" 139 37 139 40] inv4 res}
    ensures { result = fn_mut0 self args res }
    
  axiom fn_mut0_spec : forall self : borrowed c, args : (), res : bool . ([#"../../../../../creusot-contracts/src/std/ops.rs" 139 19 139 23] inv2 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 139 25 139 29] inv3 args)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 139 37 139 40] inv4 res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 138 14 138 100] postcondition_mut0 self args res = (resolve2 self /\ postcondition0 ( * self) args res))
  predicate invariant1 (self : c)
  val invariant1 (self : c) : bool
    ensures { result = invariant1 self }
    
  axiom inv1 : forall x : c . inv1 x = true
  predicate invariant0 (self : b)
  val invariant0 (self : b) : bool
    ensures { result = invariant0 self }
    
  predicate inv0 (_x : b)
  val inv0 (_x : b) : bool
    ensures { result = inv0 _x }
    
  axiom inv0 : forall x : b . inv0 x = true
  predicate precondition1 (self : b) (_2 : bool)
  val precondition1 (self : b) (_2 : bool) : bool
    ensures { result = precondition1 self _2 }
    
  predicate precondition0 (self : c) (_2 : ())
  val precondition0 (self : c) (_2 : ()) : bool
    ensures { result = precondition0 self _2 }
    
  predicate resolve0 (self : b)
  val resolve0 (self : b) : bool
    ensures { result = resolve0 self }
    
  let rec cfg incorrect [#"../692.rs" 8 0 8 76] [@cfg:stackify] [@cfg:subregion_analysis] (cond : c) (branch : b) : ()
    requires {[#"../692.rs" 5 0 6 87] precondition0 cond () /\ (forall b : bool . precondition1 branch (b) /\ (exists b : bool . forall b0 : bool . postcondition0 cond () b0
     -> b0 = b))}
    requires {[#"../692.rs" 8 57 8 61] inv1 cond}
    requires {[#"../692.rs" 8 66 8 72] inv0 branch}
    ensures { [#"../692.rs" 7 10 7 15] false }
    
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : ();
  var cond : c = cond;
  var branch : b = branch;
  {
    goto BB0
  }
  BB0 {
    assert { [@expl:type invariant] inv0 branch };
    assume { resolve0 branch };
    assert { [@expl:type invariant] inv1 cond };
    assume { resolve1 cond };
    goto BB1
  }
  BB1 {
    [#"../692.rs" 8 77 8 79] _0 <- ([#"../692.rs" 8 77 8 79] ());
    goto BB2
  }
  BB2 {
    goto BB3
  }
  BB3 {
    return _0
  }
  
end
module C692_ValidNormal_Closure2_Type
  use prelude.Int16
  use prelude.UInt32
  use prelude.Int
  use prelude.Borrow
  type c692_validnormal_closure2  =
    | C692_ValidNormal_Closure2 (borrowed uint32)
    
end
module C692_ValidNormal_Closure2
  use prelude.Int16
  use prelude.Int
  use prelude.UInt32
  use prelude.Borrow
  use C692_ValidNormal_Closure2_Type as C692_ValidNormal_Closure2
  function field_00 [#"../692.rs" 15 17 15 64] (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) : borrowed uint32
    
   =
    let C692_ValidNormal_Closure2.C692_ValidNormal_Closure2 a = self in a
  val field_00 [#"../692.rs" 15 17 15 64] (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) : borrowed uint32
    ensures { result = field_00 self }
    
  predicate unnest0 [#"../692.rs" 15 17 15 64] (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) (_2 : C692_ValidNormal_Closure2.c692_validnormal_closure2)
    
   =
     ^ field_00 _2 =  ^ field_00 self
  predicate resolve0 (self : borrowed C692_ValidNormal_Closure2.c692_validnormal_closure2) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 27 20 27 34]  ^ self =  * self
  val resolve0 (self : borrowed C692_ValidNormal_Closure2.c692_validnormal_closure2) : bool
    ensures { result = resolve0 self }
    
  let rec cfg c692_ValidNormal_Closure2 [#"../692.rs" 15 17 15 64] [@cfg:stackify] [@cfg:subregion_analysis] (_1 : borrowed C692_ValidNormal_Closure2.c692_validnormal_closure2) (b : bool) : ()
    ensures { [#"../692.rs" 15 27 15 62] b /\  * field_00 ( ^ _1) = (2 : uint32) \/ not b /\  * field_00 ( ^ _1) = (1 : uint32) }
    ensures { unnest0 ( * _1) ( ^ _1) }
    
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : ();
  var _1 : borrowed C692_ValidNormal_Closure2.c692_validnormal_closure2 = _1;
  var b : bool = b;
  var res : ();
  var _4 : uint32;
  {
    goto BB0
  }
  BB0 {
    switch (b)
      | False -> goto BB2
      | True -> goto BB1
      end
  }
  BB1 {
    [#"../692.rs" 16 25 16 26] _4 <- ([#"../692.rs" 16 25 16 26] (2 : uint32));
    goto BB3
  }
  BB2 {
    [#"../692.rs" 16 36 16 37] _4 <- ([#"../692.rs" 16 36 16 37] (1 : uint32));
    goto BB3
  }
  BB3 {
    [#"../692.rs" 16 14 16 39] _1 <- { _1 with current = (let C692_ValidNormal_Closure2.C692_ValidNormal_Closure2 x0 =  * _1 in C692_ValidNormal_Closure2.C692_ValidNormal_Closure2 ({ (field_00 ( * _1)) with current = _4 ; })) ; };
    _4 <- any uint32;
    assume { resolve0 _1 };
    [#"../692.rs" 16 14 16 39] res <- ([#"../692.rs" 16 14 16 39] ());
    [#"../692.rs" 15 17 15 64] _0 <- res;
    return _0
  }
  
end
module C692_ValidNormal_Closure1_Type
  use prelude.Int8
  use prelude.UInt32
  use prelude.Int
  use prelude.Borrow
  type c692_validnormal_closure1  =
    | C692_ValidNormal_Closure1 uint32
    
end
module C692_ValidNormal_Closure1
  use prelude.Int8
  use prelude.UInt32
  use C692_ValidNormal_Closure1_Type as C692_ValidNormal_Closure1
  use prelude.Borrow
  use prelude.Int
  function field_00 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) : uint32 =
    let C692_ValidNormal_Closure1.C692_ValidNormal_Closure1 a = self in a
  val field_00 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) : uint32
    ensures { result = field_00 self }
    
  let rec cfg c692_ValidNormal_Closure1 [#"../692.rs" 13 15 13 47] [@cfg:stackify] [@cfg:subregion_analysis] (_1 : C692_ValidNormal_Closure1.c692_validnormal_closure1) : bool
    ensures { [#"../692.rs" 13 25 13 45] result = (field_00 _1 > (7 : uint32)) }
    
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : bool;
  var _1 : C692_ValidNormal_Closure1.c692_validnormal_closure1 = _1;
  var res : bool;
  {
    goto BB0
  }
  BB0 {
    [#"../692.rs" 14 7 14 15] res <- field_00 _1 > ([#"../692.rs" 14 11 14 15] (7 : uint32));
    [#"../692.rs" 13 15 13 47] _0 <- res;
    return _0
  }
  
end
module C692_ValidNormal
  use prelude.UInt32
  use prelude.Borrow
  use prelude.Int16
  use C692_ValidNormal_Closure2_Type as C692_ValidNormal_Closure2
  predicate invariant1 (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  val invariant1 (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) : bool
    ensures { result = invariant1 self }
    
  predicate inv1 (_x : C692_ValidNormal_Closure2.c692_validnormal_closure2)
  val inv1 (_x : C692_ValidNormal_Closure2.c692_validnormal_closure2) : bool
    ensures { result = inv1 _x }
    
  axiom inv1 : forall x : C692_ValidNormal_Closure2.c692_validnormal_closure2 . inv1 x = true
  use prelude.Int8
  use C692_ValidNormal_Closure1_Type as C692_ValidNormal_Closure1
  predicate invariant0 (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  val invariant0 (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) : bool
    ensures { result = invariant0 self }
    
  predicate inv0 (_x : C692_ValidNormal_Closure1.c692_validnormal_closure1)
  val inv0 (_x : C692_ValidNormal_Closure1.c692_validnormal_closure1) : bool
    ensures { result = inv0 _x }
    
  axiom inv0 : forall x : C692_ValidNormal_Closure1.c692_validnormal_closure1 . inv0 x = true
  use prelude.Int
  function field_00 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) : uint32 =
    let C692_ValidNormal_Closure1.C692_ValidNormal_Closure1 a = self in a
  val field_00 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) : uint32
    ensures { result = field_00 self }
    
  predicate postcondition0 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) (_ : ()) (result : bool)
    
   =
    [#"../692.rs" 13 25 13 45] result = (field_00 self > (7 : uint32))
  predicate precondition1 [#"../692.rs" 15 17 15 64] (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) (args : bool)
    
   =
    let (b) = args in true
  predicate precondition0 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) (_ : ())
    
   =
    true
  val incorrect0 [#"../692.rs" 8 0 8 76] (cond : C692_ValidNormal_Closure1.c692_validnormal_closure1) (branch : C692_ValidNormal_Closure2.c692_validnormal_closure2) : ()
    requires {[#"../692.rs" 5 0 6 87] precondition0 cond () /\ (forall b : bool . precondition1 branch (b) /\ (exists b : bool . forall b0 : bool . postcondition0 cond () b0
     -> b0 = b))}
    requires {[#"../692.rs" 8 57 8 61] inv0 cond}
    requires {[#"../692.rs" 8 66 8 72] inv1 branch}
    ensures { [#"../692.rs" 7 10 7 15] false }
    
  predicate resolve0 [#"../692.rs" 13 15 13 47] (_1 : C692_ValidNormal_Closure1.c692_validnormal_closure1) =
    true
  let rec cfg valid_normal [#"../692.rs" 11 0 11 34] [@cfg:stackify] [@cfg:subregion_analysis] (n : uint32) : uint32
    ensures { [#"../692.rs" 10 10 10 15] false }
    
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : uint32;
  var n : uint32 = n;
  var r : uint32;
  var cond : C692_ValidNormal_Closure1.c692_validnormal_closure1;
  var branch : C692_ValidNormal_Closure2.c692_validnormal_closure2;
  var _7 : borrowed uint32;
  var _8 : ();
  {
    goto BB0
  }
  BB0 {
    [#"../692.rs" 12 16 12 20] r <- ([#"../692.rs" 12 16 12 20] (0 : uint32));
    [#"../692.rs" 13 15 13 47] cond <- C692_ValidNormal_Closure1.C692_ValidNormal_Closure1 n;
    [#"../692.rs" 15 17 15 64] _7 <- Borrow.borrow_mut r;
    [#"../692.rs" 15 17 15 64] r <-  ^ _7;
    [#"../692.rs" 15 17 15 64] branch <- C692_ValidNormal_Closure2.C692_ValidNormal_Closure2 _7;
    _7 <- any borrowed uint32;
    assume { resolve0 cond };
    [#"../692.rs" 17 4 17 27] _8 <- ([#"../692.rs" 17 4 17 27] incorrect0 cond branch);
    branch <- any C692_ValidNormal_Closure2.c692_validnormal_closure2;
    goto BB1
  }
  BB1 {
    [#"../692.rs" 18 4 18 5] _0 <- r;
    return _0
  }
  
end
